# Estruturas_dados

./: .gitignore
Lista/: CMakeLists.txt
Lista/include/: Lista.h
Lista/src/: Lista.c  main.c
NBA/: README.md  valores.txt
NBA/include/: nba.h
NBA/src/: main.c  nba.c
arvore/: CMakeLists.txt
arvore/include/: three.h
arvore/src/: main.c  three.c
pilha/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
pilha/include/: pilha.h
pilha/src/: main.c  pilha.c
recursao/: fact.c  fibo.c  main  main.c
